--- a/iron-comments/index.html
+++ b/iron-comments/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <form id="form-container">
-        Name: Email: Comment: Receive email updates? Submit
+        Name: Email: Comment: Receive email updates? Submit.
     </form>
 
 </body>
